--- a/meta-mender-variscite/conf/layer.conf
+++ b/meta-mender-variscite/conf/layer.conf
@@ -9,6 +9,6 @@ BBFILE_COLLECTIONS += "mender-variscite"
 BBFILE_PATTERN_mender-variscite = "^${LAYERDIR}/"
 BBFILE_PRIORITY_mender-variscite = "10"
 
-LAYERDEPENDS_mender-variscite = "mender variscite-imx"
+LAYERDEPENDS_mender-variscite = "mender variscite-bsp"
 
 LAYERSERIES_COMPAT_mender-variscite = "kirkstone"
